--- a/composer.json
+++ b/composer.json
@@ -55,7 +55,11 @@
     "config": {
         "allow-plugins": {
             "laminas/laminas-component-installer": true,
-            "laminas/laminas-skeleton-installer": true
+            "laminas/laminas-skeleton-installer": true,
+            "pestphp/pest-plugin": true
         }
+    },
+    "require-dev": {
+        "pestphp/pest": "^2.28"
     }
 }
