--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     ],
     "require": {
         "php": ">=8.1",
+        "ext-mbstring": "*",
         "laminas/laminas-component-installer": "^2.4",
         "laminas/laminas-development-mode": "^3.2",
         "laminas/laminas-skeleton-installer": "^0.6",
@@ -61,6 +62,7 @@
     },
     "require-dev": {
         "pestphp/pest": "^2.28",
-        "behat/behat": "^3.13"
+        "behat/behat": "^3.13",
+        "phpunit/phpunit": "^10.5"
     }
 }
