--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "laminas/laminas-mvc-skeleton",
+    "minimum-stability": "dev",
     "description": "Laminas MVC Skeleton Application",
     "type": "project",
     "license": "BSD-3-Clause",
@@ -9,13 +10,28 @@
         "skeleton",
         "framework"
     ],
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "git@bitbucket.org:iss-module/ideal-finance-layout-module.git"
+        },
+        {
+            "type": "vcs",
+            "url": "git@bitbucket.org:iss-module/user-management-module.git"
+        },
+        {
+            "type": "vcs",
+            "url": "git@bitbucket.org:i4f/iar-portal.git"
+        }
+    ],
     "require": {
-        "php": ">=8.1",
-        "laminas/laminas-component-installer": "^2.4",
-        "laminas/laminas-development-mode": "^3.2",
-        "laminas/laminas-skeleton-installer": "^0.6",
-        "laminas/laminas-mvc": "^3.1.1",
-        "laminas/laminas-form": "^3.4"
+        "php": ">=7.4",
+        "iss-module/iar-portal-module": "dev-feature/CRM-736/decoupling",
+        "laminas/laminas-component-installer": "*",
+        "laminas/laminas-development-mode": "*",
+        "laminas/laminas-skeleton-installer": "*",
+        "laminas/laminas-mvc": "*",
+        "laminas/laminas-form": "*"
     },
     "autoload": {
         "psr-4": {
@@ -58,8 +74,5 @@
             "laminas/laminas-skeleton-installer": true,
             "pestphp/pest-plugin": true
         }
-    },
-    "require-dev": {
-        "pestphp/pest": "^2.28"
     }
 }
